[package]
name = "kvs"
version = "0.1.0"
authors = ["Maxence Potier <maxence0@hotmail.fr>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = {version = "4.5.9", features = ["derive"]}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
name = "kvs"
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
